# AI-oas

./: .gitignore  README.md
backend/: .env.example  README.md  alembic.ini  compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_intake_persistence.py  0002_atomic_intake_constraints.py  0003_human_access_foundation.py  0004_ai_execution_foundation.py  0005_ai_execution_constraint_hardening.py  0006_workflow_authentication_foundation.py  0007_command_idempotency_foundation.py  0008_callback_command_authorization_binding.py  0009_failure_recovery_foundation.py  0010_deterministic_triage_foundation.py  (+2 more)
backend/scripts/: seed_phase3_demo.py
backend/tests/: test_app.py  test_attempt_callback_auth_unit.py  test_attempt_callbacks_unit.py  test_attempt_start_unit.py  test_auth_unit.py  test_batch1_import_safety.py  test_batch1_openapi_contract.py  test_batch1_service_import_safety.py  test_batch2_human_command_transport_unit.py  test_callback_command_authorization_unit.py  test_callback_credential_replacement_unit.py  test_command_idempotency_unit.py  test_config.py  test_db_foundation.py  test_demo_auth_unit.py  test_deterministic_decision_policy_unit.py  test_failure_recovery_policy_unit.py  test_health.py  test_intake_unit.py  test_machine_auth_unit.py  test_outbound_response_contracts.py  test_proposal_digest_unit.py  test_protected_query_cursor.py  test_recovery_response_contracts_unit.py  test_retry_ai_transport_unit.py  test_retry_authority_unit.py  test_start_ai_unit.py  test_terminal_failure_transport_unit.py
frontend/: index.html  (+5 more)
(+186 files in other folders)
