[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-operations-automation-backend"
version = "0.1.0"
description = "Executable FastAPI foundation for the AI Operations Automation Suite"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.16,<2",
    "fastapi>=0.116,<1",
    "psycopg[binary]>=3.2,<4",
    "pydantic-settings>=2.10,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.35,<1",
]

[dependency-groups]
dev = [
    "httpx2>=2,<3",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_operations_automation"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "integration: requires the local PostgreSQL service",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
